<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nova Max App</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_main_Menu">Main Menu</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_bookings">Bookings</string>
    <string name="title_activity_services_adapter">ServicesAdapter</string>
    <string name="lbl_service_name">Services Name</string>
    <string name="title_activity_staff">Staff</string>
    <string name="lbl_staff">Staff</string>
    <string name="title_activity_register">Register</string>
    <string name="lbl_log_in">Log In or Register</string>
    <string name="txt_user_name">Username</string>
    <string name="txt_password">Password</string>
    <string name="cbox_remember_me">Remember Me</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_register">Register</string>
    <string name="lbl_register">Please fill in all the fields</string>
    <string name="txt_name">Wiliam Ferraciolli</string>
    <string name="txt_password_register">123456</string>
    <string name="lbl_name_register">Name:</string>
    <string name="lbl_user_name_register">User Name:</string>
    <string name="lbl_email_register">Email:</string>
    <string name="lbl_password_register">Password:</string>
    <string name="txt_email_register">wiliam334@hotmail.com</string>
    <string name="btn_submit_register">Submit</string>
    <string name="txt_user_name_register">WilFerraciolli</string>
    <string name="img_logo_register">img_register_logo</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="lbl_reset_desc">Please enter your email!</string>
    <string name="lbl_email_reset">eMail:</string>
    <string name="btn_reset_password_reset">Reset Password</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="lbl_choose_option">Welcome</string>
    <string name="btn_check_calendar">check availability</string>
    <string name="lbl_user_name_main">userName</string>
    <string name="lbl_user_logged_in_status">Please Log in Or use as Guest</string>
    <string name="title_activity_shut_down">ShutDownActivity</string>
    <string name="lbl_user_name_bookings">userName</string>
    <string name="new_appointment">New Booking</string>
    <string name="refresh_bookings">refresh_bookings</string>
    <string name="title_activity_appointments">Appointments</string>


    <string name="btn_submit_appointment">Submit</string>
    <string name="lbl_bookings_today">booking</string>
    <string name="lbl_details_appointment">Please fill in the details</string>
    <string name="txt_date_appointments">Date</string>
    <string name="lbl_date_appointment">Date:</string>
    <string name="lbl_time_appointment">Time:</string>
    <string name="lbl_client">Client:</string>
    <string name="lbl_staff_appointment">Staff:</string>
    <string name="txt_user_name_appointment">UserName</string>
    <string name="txt_staff_name_appointment">StaffName</string>
    <string name="lbl_staff_name">StaffOne</string>
    <string name="hint_staff_name">Enter the Staff Name</string>
    <string name="lbl_service_appointment">Service</string>
    <string name="btn_change_date_appointment">Change</string>
    <string name="btn_see_staff">See Staff</string>
    <string name="btn_see_services">See Services</string>
    <string name="title_activity_find_us">Map</string>
    <string name="title_activity_about_us">About Us</string>

    <string name="hello_world">Hello world!</string>
    <string name="lbl_about_us">Nova Max Keratin</string>
    <string name="btn_register_about_us">Register</string>
    <string name="lbl_call_us">Call Us</string>
    <string name="lbl_find_us">Find Us</string>
    <string name="lbl_email_us">Email Us</string>
    <string name="lbl_shop">Shop</string>
    <string name="lbl_find">Find Us</string>
    <string name="lbl_call">Call Us</string>
    <string name="lbl_ask">Question</string>
    <string name="lbl_register_here">Register</string>
    <string name="lblb_shop">Shop</string>
    <string name="lbl_what_we_do">So, what does Brazilian Keratin do?</string>
    <string name="lbl_desc">Brazilian Keratin treatment is a new revolutionary anti-volume keratin treatment (semi-permanent hair straighening) created in brazil now avalible to the UK. Both clients and professionals will love the reatment works as a shield arround the hair shaft, protecting it from humidity and sunlight where keratin can be lost</string>
    <string name="lbl_more_about_us">Brazilian Keratin Benefits</string>
    <string name="lbl_one">Straighten hair for 2 months</string>
    <string name="lbl_two">Can be done on all hair types</string>
    <string name="lbl_three">Gives a healthy looking-shine</string>
    <string name="lbl_company_name">Nov\'Max Keratin Limited</string>
    <string name="lbl_addrress">7 Apollo Close, Poole, Dorset, BH12 3HS</string>
    <string name="lbl_four">Anti frizz treatment</string>
    <string name="img_logo_find_us">Logo</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_activity_products_draw">Products Drawer</string>

    <string name="title_section1">Full Kit</string>
    <string name="title_section2">Anti Volume</string>
    <string name="title_section3">Sample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example"> Help </string>
    <string name="img_logo_main_menu">Logo</string>
    <string name="lbl_bookings_look">Bookings</string>
    <string name="lbl_about_us_see">About Us</string>
    <string name="lbl_bookings">See Bookings</string>
    <string name="lbl_staf_list">See Staff</string>
    <string name="lbl_staff_see">See Services</string>
    <string name="lbl_see_products">See Products</string>
    <string name="lbl_staff_desc">Staff</string>
    <string name="lbl_services_desc">Services</string>
    <string name="lbl_products_desc">Products</string>
    <string name="btn_entertain">Entertain</string>
    <string name="btn_about_nova">About</string>
    <string name="btn_shopping">Shopping</string>
    <string name="btn_my_appointments">My Appointments</string>
    <string name="lbl_enter">Entertain</string>
    <string name="lbl_buy">Buy</string>
    <string name="lbl_my_b">My Bookings</string>
    <string name="lbl_title">Are you fed up with straightening your hair every day?</string>
    <string name="lbl_sut_til">We have the solution!</string>
    <string name="lbl_sub_sub_til">Revolutionary Semi-Permanent Hair Straightening</string>
    <string name="img_logo_title">Logo</string>
    <string name="title_activity_my_bookings">My Bookings</string>
    <string name="lbl_my_bookings_display">My Bookings by date</string>
    <string name="txt_user_name_my">User Name</string>
    <string name="txt_date_my">Date</string>
    <string name="txt_service_my">Service</string>
    <string name="txt_price_my">Price</string>
    <string name="txt_time_my">Time</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_pay">Pay</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_entertain">Entertain</string>

</resources>
