<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        style="@style/fontHeader"
        android:id="@+id/lblLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_log_in"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lblUserNameBookings"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_user_name"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/lblLogIn"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnRegister"
        android:editable="true"
        android:text="WilFerraciolli" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:layout_below="@+id/lblUserNameBookings"
        android:layout_alignEnd="@+id/lblUserNameBookings"
        android:layout_alignParentStart="true"
        android:text="123456" />

    <Button
        android:background="@drawable/button_shape_small"
        style="@style/smallButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@drawable/button_shape_small"
        style="@style/smallButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_password"
        android:id="@+id/btnResetPassword"
        android:layout_alignTop="@+id/btnRegister"
        android:layout_toStartOf="@+id/btnRegister"
        android:layout_alignParentStart="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbox_remember_me"
        android:id="@+id/cBoxRememberMe"
        android:checked="false"
        android:layout_alignTop="@+id/btnResetPassword"
        android:layout_alignParentStart="true" />

</RelativeLayout>