<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wiltech.novamaxapp.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_register"
        android:id="@+id/lblRegister"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name_register"
        android:id="@+id/lblName"
        android:layout_marginTop="77dp"
        android:layout_below="@+id/lblRegister"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txt_name"
        android:ems="10"
        android:id="@+id/txtName"
        android:layout_alignBottom="@+id/lblName"
        android:layout_alignEnd="@+id/btnSubmitRegister"
        android:layout_alignStart="@+id/txtUserName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email_register"
        android:id="@+id/lblEmail"
        android:layout_below="@+id/lblUserNameBookings"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:layout_alignBottom="@+id/lblEmail"
        android:text="@string/txt_email_register"
        android:layout_alignEnd="@+id/txtUserName"
        android:layout_alignStart="@+id/txtUserName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_password_register"
        android:id="@+id/lblPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:text="@string/txt_password_register"
        android:layout_alignBottom="@+id/lblPassword"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_alignEnd="@+id/btnSubmitRegister" />

    <Button
        android:background="@drawable/button_shape"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_register"
        android:id="@+id/btnSubmitRegister"
        android:onClick="btnSubmitRegisterClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_marginBottom="88dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_name_register"
        android:id="@+id/lblUserNameBookings"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/lblName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUserName"
        android:layout_alignBottom="@+id/lblUserNameBookings"
        android:text="@string/txt_user_name_register"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lblUserNameBookings" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgRegisterLogo"
        android:src="@drawable/ic_launcher"
        android:layout_above="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_logo_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Repeat Password:"
        android:id="@+id/textView11"
        android:layout_below="@+id/lblPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRepeatPassword"
        android:hint="Repeat Password"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView11" />

    <Button
        android:background="@drawable/button_shape"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/btnCancelRegister"
        android:layout_alignTop="@+id/btnSubmitRegister"
        android:layout_alignParentStart="true"
        android:onClick="btnCancelRegisterClicked" />

</RelativeLayout>
