<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wiltech.novamaxapp.AppointmentsActivity">

    <!-- first Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <TextView
            android:id="@+id/lblDetailsAppointment"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:onClick="btnChangeDateClicked"
            android:text="@string/lbl_details_appointment"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <!-- Second Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <TextView
            android:id="@+id/lblDateAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_date_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtDateAppointment"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="25sp"
            android:text="@string/txt_date_appointments" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnChangeDate"
                style="@style/smallButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/button_shape_small"
                android:onClick="btnChangeDateClicked"
                android:text="@string/btn_change_date_appointment" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTimeAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_time_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp">

        <TextView
            android:id="@+id/lblClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_client"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtUserNameAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="true"
            android:paddingLeft="15sp"
            android:text="@string/txt_user_name_appointment" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp">

        <TextView
            android:id="@+id/lblStaffAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_staff_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp">

        <TextView
            android:id="@+id/lblServiceAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_service_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelAppointments"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/button_shape"
                android:onClick="btnCancelAppointmentsClicked"
                android:text="Cancel" />

            <Button
                android:id="@+id/btnSubmitAppointment"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_weight="0.15"
                android:background="@drawable/button_shape"
                android:onClick="btnSubmitAppointmentClicked"
                android:text="@string/btn_submit_appointment" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
