<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wiltech.novamaxapp.ResetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_reset_desc"
        android:id="@+id/lblResetPassword"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email_reset"
        android:id="@+id/lblEmailReset"
        android:layout_marginTop="130dp"
        android:layout_below="@+id/lblResetPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmailReset"
        android:layout_alignBottom="@+id/lblEmailReset"
        android:layout_alignStart="@+id/lblResetPassword"
        android:text="\@hotmail.com"
        android:layout_alignEnd="@+id/btnResetPassword" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLogoReset"
        android:src="@drawable/ic_launcher"
        android:contentDescription="img_logo_reset"
        android:layout_below="@+id/lblResetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <Button
        android:background="@drawable/button_shape"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_password_reset"
        android:id="@+id/btnResetPassword"
        android:onClick="btnResetPasswordClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="46dp" />
</RelativeLayout>
